; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_diff_generate.c_iterator_current.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_diff_generate.c_iterator_current.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_ITEROVER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32*)* @iterator_current to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iterator_current(i32** %0, i32* %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32** %0, i32*** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32**, i32*** %3, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @git_iterator_current(i32** %6, i32* %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* @GIT_ITEROVER, align 4
  %10 = icmp eq i32 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32**, i32*** %3, align 8
  store i32* null, i32** %12, align 8
  store i32 0, i32* %5, align 4
  br label %13

13:                                               ; preds = %11, %2
  %14 = load i32, i32* %5, align 4
  ret i32 %14
}

declare dso_local i32 @git_iterator_current(i32**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
